--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,13 +1,18 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      LeBonAngle
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+  Le Bon Angle C'est Notre Projet 
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
