Mise en place de pop-up Alert
Mise en place de pop-up pour toute les erreurs des utilisateurs : voir login/register/forgotpassword

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content padding>
     <ion-title >Le Bon Angle</ion-title>
-    <img  class="logo" src="../../assets/imgs/logoprovisoire.png" />
+    <img  class="logo" align ='center' src="../../assets/imgs/logoprovisoire.png" />
     <ion-list>
         <ion-label>{{test}}</ion-label>
         <ion-item>
