--- a/src/pages/forgotpswd/forgotpswd.html
+++ b/src/pages/forgotpswd/forgotpswd.html
@@ -14,5 +14,17 @@
 
 
 <ion-content padding>
-  <article>PROUT</article>
+  
+    <ion-item>
+      <ion-label stacked>Email</ion-label>
+      <ion-input type="text" [(ngModel)]="email"></ion-input>
+    </ion-item>
+    <button ion-button (click)="requestSend()">Envoyé</button>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title align='center'>Le bon coin </ion-title>
+    <ion-icon name="mail"></ion-icon>
+  </ion-toolbar>
+</ion-footer>
