--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -58,4 +58,9 @@
   <button ion-button class="btn" (click)="checkInputEmpty()">Inscription</button>
 
 </ion-content>
-
+<ion-footer>
+  <ion-toolbar>
+    <ion-title align='center'>Le bon coin </ion-title>
+    <ion-icon name="mail"></ion-icon>
+  </ion-toolbar>
+</ion-footer>
