--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,7 +14,7 @@
         </ion-item>
 
     </ion-list>
-    <button ion-button class="btn" (click)="checkAuthentification()">Login</button>
+    <button ion-button class="btn" (click)="checkAuthentification()">Connexion</button>
     <ion-label class="mdpforgot" (click)="mdpforgot()">Mot de passe oublié ?</ion-label>
     <ion-label class="mdpforgot" (click)="register()">Inscription</ion-label>
     
