--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,5 @@
 <ion-content padding>
-    <ion-title >Le Bon Angle</ion-title>
-    <img  class="logo" align ='center' src="../../assets/imgs/logoprovisoire.png" />
+    <img  class="logo" align ='center' src="../../assets/imgs/lebonangle1.png" width="150px" />
     <ion-list>
         <ion-label>{{test}}</ion-label>
         <ion-item>
