--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,6 +13,7 @@
     <br>
     <br>
     <br>
+    <button ion-button class="btn" (click)="useAnnonce()">Annonce</button>
     <p>
         If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
     </p>
