--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,20 +1,47 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>
-            LeBonAngle
-        </ion-title>
+  
+      <!-- LEFT SIDE -->
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+  
+      <!-- CENTER SIDE -->
+      <ion-title>Annonces Immobilières</ion-title>
+  
+      <!-- RIGHT SIDE -->
+      <div class="left-button">
+        <ion-buttons end>
+          <button (click)="toggleSearchMenu()" ion-button icon-only>
+            <ion-icon name="search"></ion-icon>
+          </button>
+        </ion-buttons>
+      </div>
+      
     </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-    Le Bon Angle C'est Notre Projet
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <button ion-button class="btn" (click)="useAnnonce()">Annonce</button>
-    <p>
-        If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-    </p>
-</ion-content>
+  </ion-header>
+  
+  <ion-content >
+    <div class="search-menu" [@myvisibility]="searchMenuVisible">
+      <br/>
+      <ion-input class="input-search-menu input-ville-cp" type="text" placeholder="Ville ou code postal" ></ion-input>
+      <br/>
+      <div class="double-input">
+        <ion-input class="input-search-menu input-short input-left" type="text" placeholder="Loyer Min" ></ion-input>
+        <span class="dash">-</span>
+        <ion-input class="input-search-menu input-short input-right" type="text" placeholder="Loyer Max" ></ion-input>
+      </div>
+      <br/>
+      <div class="double-input">
+        <ion-input class="input-search-menu input-short input-left" type="text" placeholder="Surface Min" ></ion-input>
+        <span class="dash">-</span>
+        <ion-input class="input-search-menu input-short input-right" type="text" placeholder="Surface Max" ></ion-input>
+      </div>
+      <br/>
+      <div class="double-input">
+        <ion-input class="input-search-menu input-short input-left" type="text" placeholder="Pièces Min" ></ion-input>
+        <span class="dash">-</span>
+        <ion-input class="input-search-menu input-short input-right" type="text" placeholder="Pièces Max" ></ion-input>
+      </div>
+    </div>
+  </ion-content>
