--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,4 +1,4 @@
-<ion-content padding style="background-color: #27ae60;">
+<ion-content padding style="background-color: #27AE60;">
     <img  class="logo" align ='center' src="../../assets/imgs/lebonangle1.png" width="150px" />
     <ion-list>
         <ion-label>{{test}}</ion-label>
