--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -14,6 +14,10 @@
 
 
 <ion-content padding>
-    {{ userConnected }}
+    <div><p>ID user : {{ userConnect.ID }} </p>
+    Name : {{ userConnect.NOM }}
+    <!--Plus qu'a mettre en forme whala  -->
+    </div>
+    
     coucou
 </ion-content>
