--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,13 +4,13 @@
         
 
         <ion-item class="form">
-                <ion-label class="titlelab" stacked>Email</ion-label>
-            <ion-input  type="text" [(ngModel)]="email"></ion-input>
+            <ion-label class="titlelab" stacked>Email</ion-label>
+            <ion-input class="input" type="text" [(ngModel)]="email"></ion-input>
         </ion-item>
 
         <ion-item class="form">
             <ion-label class="titlelab" stacked>Password</ion-label>
-            <ion-input type="password" [(ngModel)]="password"></ion-input>
+            <ion-input class="input" type="password" [(ngModel)]="password"></ion-input>
         </ion-item>
 
     
