--- a/src/pages/forgotpswd/forgotpswd.html
+++ b/src/pages/forgotpswd/forgotpswd.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ForgotpswdPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -13,18 +7,11 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style="background-color: #27AE60;">
   
-    <ion-item>
-      <ion-label stacked>Email</ion-label>
-      <ion-input type="text" [(ngModel)]="email"></ion-input>
+    <ion-item class="form">
+      <ion-label stacked class="titlelab">Email</ion-label>
+      <ion-input class="input" type="text" [(ngModel)]="email"></ion-input>
     </ion-item>
-    <button ion-button (click)="requestSend()">Envoyé</button>
+    <button class="btn"ion-button (click)="requestSend()">Envoyé</button>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar>
-    <ion-title align='center'>Le bon coin </ion-title>
-    <ion-icon name="mail"></ion-icon>
-  </ion-toolbar>
-</ion-footer>
