Correction Style Login Page

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,12 +4,12 @@
         
 
         <ion-item class="form">
-            <ion-label class="titlelab" stacked>Email</ion-label>
+            <ion-label class="titlelab" floating>Email</ion-label>
             <ion-input class="input" type="text" [(ngModel)]="email"></ion-input>
         </ion-item>
 
         <ion-item class="form">
-            <ion-label class="titlelab" stacked>Password</ion-label>
+            <ion-label class="titlelab" floating>Password</ion-label>
             <ion-input class="input" type="password" [(ngModel)]="password"></ion-input>
         </ion-item>
 
