--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -20,4 +20,8 @@
     </div>
     
     coucou
-</ion-content>
+    <div>
+        
+      <button ion-button  (click)="edit()">edit</button>
+    </div>
+  </ion-content>
