--- a/src/pages/profiledit/profiledit.html
+++ b/src/pages/profiledit/profiledit.html
@@ -14,5 +14,7 @@
 
 
 <ion-content padding>
-
+  <ion-input></ion-input>
+  <ion-input type="text" value="caca" placeholder="Tel Input"></ion-input>
+  <ion-input></ion-input>
 </ion-content>
